fix: update skeleton loading visibility logic and adjust height properties for better layout

--- a/src/styles.css
+++ b/src/styles.css
@@ -267,7 +267,7 @@ thead tr th {
 	gap: 1rem;
 	max-width: 1200px;
 	margin: 0 5.25rem;
-	height: 100%;
+	min-height: 100%;
 }
 
 .skeleton-header {
@@ -302,7 +302,7 @@ thead tr th {
 .skeleton {
 	background-color: #e0e0e0;
 	width: 100%;
-	height: 1rem;
+	height: 1em;
 	border-radius: 4px;
 	overflow: hidden;
 }
@@ -383,7 +383,7 @@ thead tr th {
 	text-align: left;
 	margin: 1rem 2rem;
 	place-items: center;
-	height: 100vh;
+	min-height: 100vh;
 }
 
 .coin-page-header {
